The second  push on my progresses

--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
         <button style="width: 1\0px;" class="research-button"><i class="fa-solid fa-search"></i></button>
     </div><br>
     <div class="home-bold">
-
+        <img src="./img/feature-1200.webp" alt="">
+        <div class="img-fl"></div>
     </div>
 </body>
 </html>
