The third  push on my progresses

--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
             
         </div>
         <ul class="menu-2">
-            <li>Give <i></i></li>
-            <li>Alumni <i></i></li>
-            <li>Athletics<i></i></li>
+            <li>Give <i class="fa-solid fa-external-link"></i></li>
+            <li>Alumni <i class="fa-solid fa-external-link"></i></li>
+            <li>Athletics <i class="fa-solid fa-external-link"></i></li>
         </ul>
     </nav>
     <div class="extra-menus">
@@ -33,8 +33,13 @@
         <button style="width: 1\0px;" class="research-button"><i class="fa-solid fa-search"></i></button>
     </div><br>
     <div class="home-bold">
+        <div class="left">
+
+        </div>
+        <div class="right">
         <img src="./img/feature-1200.webp" alt="">
         <div class="img-fl"></div>
+    </div>
     </div>
 </body>
 </html>
