--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
     </div><br>
     <div class="home-bold">
         <div class="left">
+<h4>UNIVERSITY</h4>
+<br>
+<h1>Adm. Christopher Grady, Vice Chairman of Joint Chiefs of Staff, to deliver 2025 Commencement address</h1>
 
         </div>
         <div class="right">
