The seventh  push of my progresses

--- a/index.html
+++ b/index.html
@@ -79,6 +79,26 @@
             </td>
         </tr>
     </table>
+
+<div class="blue-section">
+<table>
+    <tr>
+        <td>
+            <div class="right">
+                <img src="./img/pillar-research-1600.avif" width="400" alt="">
+                <div class="img-fl"></div>
+        </td>
+        <td>
+            <div class="table-contents2">
+                <h4 class="tbl-title">RESEARCH</h4>
+                <br>
+                <h1 class="research"><hr>The Opportunity of Inquiry</h1>
+                
+             </div>
+        </td>
+    </tr>
+</table>
+</div>    
 </center>
 
 
