The eighth  push of my progresses

--- a/index.html
+++ b/index.html
@@ -45,12 +45,12 @@
     </div>
     <br>
     <button>Read more  <div class="gapping">> <i class="fa-solid fa-external-link"></i></div></button>
-    </div><br><br><br>
+    </div><br><br><br><br>
     <center>
-    <table>
+    <table class="Monalisa">
         <tr>
             <td>
-                <img src="./img/monalisa_800.jpeg" width="400" alt="">
+                <img src="./img/monalisa_800.jpeg" alt="">
                 <br>
                 <div class="table-contents1">
                     <h4 class="tbl-title">UNIVERSITY</h4>
@@ -92,7 +92,9 @@
             <div class="table-contents2">
                 <h4 class="tbl-title">RESEARCH</h4>
                 <br>
-                <h1 class="research"><hr>The Opportunity of Inquiry</h1>
+                <h1 class="research"><hr>The Opportunity of Inquiry</h1><br>
+            <p>For scholars who share a common passion for inquiry because of what it can reveal about our world and ourselves, there is opportunity here.</p>
+
                 
              </div>
         </td>
