The nineth  push of my progresses

--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
     <center>
     <table class="Monalisa">
         <tr>
-            <td>
+            <td class="montd">
+                <div class="table-contents1-mo">
                 <img src="./img/monalisa_800.jpeg" alt="">
                 <br>
-                <div class="table-contents1">
                     <h4 class="tbl-title">UNIVERSITY</h4>
                     <br>
                     <button class="inspiration">Women Who Inspire: Monalisa</button>
