The eleventh  push of my progresses

--- a/index.html
+++ b/index.html
@@ -95,8 +95,8 @@
                 <h1 class="research">The Opportunity of Inquiry</h1><br>
                 <hr><br>
             <p>For scholars who share a common passion for inquiry because of what it can reveal about our world and ourselves, there is opportunity here.</p>
-           <br><br>
-           <button>Read more  <div class="gapping">></div></button>
+           <br><br><br>
+           <button>Research at ND  <div class="gapping">></div></button>
             
         </div>
         </td>
