--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     <tr>
         <td>
             <div class="right">
-                <img src="./img/pillar-research-1600.avif" width="400" alt="">
+                <img src="./img/pillar-research-1600.avif"  alt="">
                 <div class="img-fl"></div>
         </td>
         <td>
@@ -100,6 +100,35 @@
             
         </div>
         </td>
+        </tr>
+
+<tr>
+<!-- second col -->
+    <td>
+        <div class="table-contents2">
+            <h4 class="tbl-title">FAITH & SERVICE</h4>
+            <br>
+            <h1 class="research">The Demands of Justice</h1><br>
+            <hr><br>
+        <p>Notre Dame is animated by a faith that inspires us to seek knowledge because of the powerful tool it can be to improve humankind.</p>
+       <br><br><br>
+       <button>Faith & Serviceat ND  <div class="gapping">></div></button>
+        
+    </div>
+    </td>
+
+<!-- Third col -->
+
+    <td>
+        <div class="right">
+            <img src="./img/pillar-faith-1600.jpeg"  alt="">
+            <div class="img-fl"></div>
+    </td>
+
+
+
+
+
     </tr>
 </table>
 </div>    
