--- a/index.html
+++ b/index.html
@@ -121,12 +121,37 @@
 
     <td>
         <div class="right">
-            <img src="./img/pillar-faith-1600.jpeg"  alt="">
+            <img src="./img/pillar-faith-1600.jpeg" alt="">
             <div class="img-fl"></div>
     </td>
 
 
 
+
+
+    </tr>
+
+
+
+
+    <tr>
+        <td>
+            <div class="right">
+                <img src="./img/pillar-global-1600.avif"  alt="">
+                <div class="img-fl"></div>
+        </td>
+        <td>
+            <div class="table-contents2">
+                <h4 class="tbl-title">RESEARCH</h4>
+                <br>
+                <h1 class="research">The Opportunity of Inquiry</h1><br>
+                <hr><br>
+            <p>For scholars who share a common passion for inquiry because of what it can reveal about our world and ourselves, there is opportunity here.</p>
+           <br><br><br>
+           <button>Research at ND  <div class="gapping">></div></button>
+            
+        </div>
+        </td>
 
 
     </tr>
