--- a/index.html
+++ b/index.html
@@ -159,7 +159,21 @@
 </div>    
 </center>
 
+<br><br>
 
+<br><br><br><br>
+<div class="atwork">
+    <div class="texts">
+    <h4 class="tbl-title">RESEARCH</h4>
+    <br>
+    <h1 class="research">The Opportunity of Inquiry</h1><br>
+    <hr><br>
+<p>For scholars who share a common passion for inquiry because of what it can reveal about our world and ourselves, there is opportunity here.</p>
+</div>
+<br><br><br>
+<button>Research at ND  <div class="gapping">></div></button>
+
+</div>
 <br><br><br>
 </body>
 </html>
