--- a/index.html
+++ b/index.html
@@ -303,14 +303,31 @@
     </div>
  </div>
 
-
+<br><br><br>
 
  <div class="notre">
     <div class="blue-part">
-        “Notre Dame must be the leading global Catholic research university, on par with but distinct from the world's best private universities. This effort to educate students and conduct research at the highest level animated by a distinctive Catholic mission is one of the most exciting and consequential experiments in global higher education.”
+        “Notre Dame must be the leading global Catholic research university, on par with but distinct from the world's best private universities. This effort to educate students and conduct research at the highest level animated by a distinctive Catholic mission is one of the most exciting and consequential experiments in global higher education.”<br><br>
+        <h4>— Notre Dame 2033: A Strategic Framework</h4>
     </div>
     <img src="./img/dowd-students-1200.jpeg" alt="">
  </div>
+ <br><br><br><br><br><br>
+ <div class="atwork">
+    <div class="texts">
+    <h4 class="tbl-title">UNIVERSITY EVENTS</h4>
+    <br>
+    <h1 class="researcho">Notre Dame In Motion</h1><br>
+    <hr><br>
+<!-- <p>For scholars who share a common passion for inquiry because of what it can reveal about our world and ourselves, there is opportunity here.</p> -->
+</div>
+<br><br><br>
+<button class="skipo">View All Events<div class="gapping">></div></button>
+
+</div>
+
+<br>
+
 <br><br><br>
 </body>
 </html>
