My 23th  push of my cloning progress

--- a/index.html
+++ b/index.html
@@ -376,7 +376,47 @@
             <br><i class="fa-solid fa-clock"></i> Wed, Mar 26 at 5:00 pm
         </div>
     </div>
+</div><br><br><br>
+<div class="pre-bot">
+    <nav class="nav-topp">
+    <div class="menu-fieldd"><br>
+        <ul class="menu-11">
+            <!-- <li>About</li> -->
+            <li>Bookstore</li>
+            <li>Employment</li>
+            <li>Tour</li>
+            <li>InsideND</li>
+            <li>Academic Calendar</li>
+        </ul>
+        
+    </div>
+</nav>
+</div><br>
+
+
+<div class="pre-botom">
+<img src="./img/w-logo.jpg" alt="">
+<div class="platforms">
+    <ul>
+        <li><i class="fa-brands fa-facebook"></i> Facebook</li>
+        <li><i class="fa-brands fa-twitter"></i> X/Twitter</li>
+        <li><i class="fa-brands fa-instagram"></i> Instagram</li>
+        <li><i class="fa-brands fa-youtube"></i> YouTube</li>
+        <li><i class="fa-brands fa-linkedin"></i> LinkedIn</li>
+    </ul>
 </div>
+<div class="links">
+    <a href="#">&copy; 2025 University of Notre Dame</a><br>
+    Notre Dame, IN 46556 USA <br>
+    Phone: (574) 631-5000 <br>
+    Contact
+</div>
+    </div>
+</nav>
+</div>
+
+
+
 <br><br><br>
 </body>
 </html>
