My 24th  push of my cloning progress

--- a/index.html
+++ b/index.html
@@ -414,9 +414,25 @@
     </div>
 </nav>
 </div>
-
-
-
 <br><br><br>
+<footer>
+    
+    <ul>
+        <li> Facebook</li>
+        <li>X/Twitter</li>
+        <li></i> Instagram</li>
+        <li> YouTube</li>
+        <li>LinkedIn</li>
+    </ul>
+    <ul>
+        <li> Facebook</li>
+        <li>X/Twitter</li>
+        <li></i> Instagram</li>
+        <li> YouTube</li>
+        <li>LinkedIn</li>
+    </ul>
+
+</footer>
+
 </body>
 </html>
