My 25th logo  push of my cloning progress

--- a/index.html
+++ b/index.html
@@ -3,9 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>University of Notre Dame</title>
     <link rel="stylesheet" href="./img/index.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
+    <link rel="icon" href="./img/monogram-96.png">
 </head>
 <body>
     <nav class="nav-top">
